<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/display_action_copy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_action_copy" />

    <Button
        android:id="@+id/display_action_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_action_edit" />

    <Button
        android:id="@+id/display_action_delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/display_action_delete" />
</LinearLayout>