<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    tools:context=".controller.AddMultipleLyricsActivity">

    <TextView
        android:id="@+id/artist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="28dp"
        android:text="@string/al_title"
        android:textAlignment="viewEnd"
        android:textColor="@color/secondTitle"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/am_1"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_multiple_select_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/am_select" />

        <TextView
            android:id="@+id/add_multiple_select_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/am_no_file" />
    </LinearLayout>

    <Button
        android:id="@+id/add_multiple_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/am_add" />

</LinearLayout>