<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:orientation="vertical"
    tools:context=".controller.AddLyrics1Fragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/al_1_headline"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/al_1_title"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/al_1_title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/al_1_artist"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/al_1_artist_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/al_1_language"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/al_1_language_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>