<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/home_searchbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:hint="@string/home_searchbar"
        android:imeOptions="actionGo"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/home_addlyrics_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/home_add_lyrics"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:cornerRadius="16dp" />

    <TextView
        android:id="@+id/main_add_multiple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/home_add_multiple_lyrics"
        android:textColor="#5D5D5D"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/home_recent"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp" />
    </ScrollView>

</LinearLayout>