<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <EditText
            android:id="@+id/results_searchbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/results_searchbar"
            android:imeOptions="actionGo"
            android:inputType="text" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/results_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/background"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/results_all_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_all" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/results_lyrics_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_lyrics" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/results_title_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_title" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/results_artist_tab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results_artist" />
        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/results_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/results_no_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="100dp"
                android:text="@string/results_no_result"
                android:textAlignment="center"
                android:textColor="#B3B3B3"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>