<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:orientation="vertical"
    android:paddingTop="4dp"
    tools:context=".controller.DisplayActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/display_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        app:srcCompat="@drawable/baseline_settings_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/display_title_test"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/display_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/display_artist_test"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">

            <ImageView
                android:id="@+id/display_lang_flag"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:src="@drawable/jp" />

            <TextView
                android:id="@+id/display_lang_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="@string/lang_row_jp_test"
                android:textSize="16sp" />

            <Button
                android:id="@+id/display_romanize_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:text="@string/display_romanize"
                android:textSize="12sp" />

            <Button
                android:id="@+id/display_translate_button"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:text="@string/display_translate"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="12dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_underline"
                android:textAlignment="viewStart"
                android:textSize="16sp"
                android:textStyle="italic" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/display_n5" />
            </RadioGroup>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="8dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/display_lyrics_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>
    </LinearLayout>

</FrameLayout>